// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strip-pip-from-python-images migration > strips pip from a py#agent Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

# Remove the base image's pip: the runtime runs from the bundled environment and
# never needs it, and pip's vendored packages carry known HIGH/CRITICAL
# vulnerabilities flagged by the image scan.
RUN python -m pip uninstall -y pip && \\
    rm -rf /usr/local/lib/python*/site-packages/pip \\
           /usr/local/lib/python*/site-packages/pip-*.dist-info

WORKDIR /app

# Copy bundled package
COPY . /app

EXPOSE 8080

ENV PYTHONPATH=/app
ENV PATH="/app/bin:\${PATH}"

CMD ["python", "bin/opentelemetry-instrument", "python", "-m", "proj_py_project.my_agent.main"]
"
`;

exports[`strip-pip-from-python-images migration > strips pip from a py#mcp-server Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

# Remove the base image's pip: the runtime runs from the bundled environment and
# never needs it, and pip's vendored packages carry known HIGH/CRITICAL
# vulnerabilities flagged by the image scan.
RUN python -m pip uninstall -y pip && \\
    rm -rf /usr/local/lib/python*/site-packages/pip \\
           /usr/local/lib/python*/site-packages/pip-*.dist-info

WORKDIR /app

# Copy bundled package
COPY . /app

EXPOSE 8000

ENV PYTHONPATH=/app

CMD ["python", "bin/opentelemetry-instrument", "python", "-m", "uvicorn", "proj_py_project.my_mcp.http:app", "--host", "0.0.0.0", "--port", "8000"]
"
`;
